argocd/apps/rag-system/config/frontend-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-frontend
  namespace: rag-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-frontend
  template:
    metadata:
      labels:
        app: rag-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ass-nss-project/rag-frontend:kost-fe1a596  
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: rag-frontend-nginx
