argocd/apps/rag-system/config/worker-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-worker
  namespace: rag-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-worker
  template:
    metadata:
      labels:
        app: rag-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/ass-nss-project/rag-api:kost-ce7bb65
          command: ["python", "worker.py"]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 3Gi
          volumeMounts:
            - name: hf-cache
              mountPath: /root/.cache/huggingface
      volumes:
        - name: hf-cache
          persistentVolumeClaim:
            claimName: rag-worker-hf-cache
