argocd/apps/rag-system/config/rag-frontend-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-frontend
  namespace: rag-system
spec:
  selector:
    app: rag-frontend
  ports:
    - port: 80
      targetPort: 80
