argocd/apps/rag-system/config/rabbitmq-mgmt-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq-mgmt
  namespace: rag-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-rabbitmq-mgmt
  hostnames:
    - rabbitmq-mgmt.nss.jkzl.eu
  rules:
    - backendRefs:
        - name: rag-rabbitmq
          port: 15672
