argocd/apps/rag-system/config/rag-system-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rag-system
  namespace: rag-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-rag-sys
  hostnames:
    - rag-sys.nss.jkzl.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: rag-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /sources
      backendRefs:
        - name: rag-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /query
      backendRefs:
        - name: rag-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /incidents
      backendRefs:
        - name: rag-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /documents
      backendRefs:
        - name: rag-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /experiments
      backendRefs:
        - name: rag-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - name: rag-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /metrics
      backendRefs:
        - name: rag-api
          port: 8000
    - backendRefs:
        - name: rag-frontend
          port: 80
